# choose-your-own-adventure-backend

./: .gitignore  main.py  pyproject.toml
core/: config.py  models.py  prompts.py  story_generators.py
db/: database.py
models/: job.py  story.py
routers/: job.py  story.py
schemas/: story.py
